# Task-Claw

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RUST-REWRITE-PLAN.md  SECURITY.md  Start-TaskClaw.bat  pipeline.json  prompts.json  providers.json  skills.json  task-claw.py  test_e2e.py  test_pipeline.py
.claude/skills/agent-compare/: SKILL.md
.claude/skills/cost-estimator/: SKILL.md
.claude/skills/provider-setup/: SKILL.md
.claude/skills/skillswarm/: SKILL.md
.github/workflows/: ci.yml
docs/: PIPELINE.md  pipeline-optimizations.txt
task-claw-rs/: Cargo.toml
task-claw-rs/src/: cli.rs  config.rs  error.rs  git.rs  main.rs  prompts.rs  provider.rs  research.rs  security.rs  services.rs  skills.rs  state.rs  types.rs
task-claw-rs/src/pipeline/: context.rs  garbage.rs  hooks.rs  mod.rs  output.rs  pm.rs  stages.rs  stats.rs  team.rs
task-claw-rs/src/server/: mod.rs  routes_api.rs  routes_pipeline.rs  routes_static.rs
web/: index.html  pipeline.html
web/css/: pipeline.css  style.css  tasks.css
web/js/: app.js  pipeline.js  tasks.js
