[package]
name = "task-claw"
version = "0.1.0"
edition = "2021"
description = "Multi-Provider Coding Agent — Rust rewrite"

[[bin]]
name = "task-claw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
which = "7"
uuid = { version = "1", features = ["v4"] }
tokio-util = "0.7"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
